--- a/autres/styles.css
+++ b/autres/styles.css
@@ -11,7 +11,7 @@
 li, a, button {
     font-family: "Playball", sans-serif;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 21px;
     color: #edf0fe;
     text-decoration: none;
 }
@@ -26,6 +26,7 @@ header{
 .logo {
     cursor: pointer;
     margin-right: auto;
+    border-radius: 20px;
 }
 
 .nav_links{
@@ -53,7 +54,7 @@ button {
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-    margin-left: 400px;
+    margin-left: 300px;
 }
 
 button:hover {
