--- a/autres/styles.css
+++ b/autres/styles.css
@@ -31,20 +31,29 @@ header{
 
 .nav_links{
     list-style: none;
+
 }
 
 .nav_links li {
-    display: inline-block;
     padding: 0px 30px;
+    height: 30px;
+	text-align:center;
+	position:relative;
+    align-items: center;
+
+
+
 }
 
 
 .nav_links li a {
-    transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;	
 }
 
 .nav_links li a:hover {
     color: #0088a9;
+
+
 }
 
 button {
@@ -63,58 +72,14 @@ button:hover {
 
 
 
-
-
-nav a:hover
-{
-    color: white;
-    border-bottom: 50px solid
-	list-style-type: none;
-	margin-right: 15px;
-
-}
-
-nav ul{
-	list-style:none;
-	margin:0;
-	padding:0;
-}
-
-nav ul li {
-	float: left;
-	width: 50%;
-	height: 40px;
-	background-color: teal;
-	line-height: 40px;
-	text-align:center;
-	font-family: "Playball ";
-	font-weight:500;
-	color: black;
-	position:relative;
-	z-index:51;
-  	border-radius: 20px;
-
-	}
-
-nav ul li a{
-	display: block;
-	font-size: 1.3em;
-    color: white;
-    padding-bottom: 0px;
-    text-decoration: none;
-    border-radius: 20px;
-
-	}
-
-nav ul li a:hover{
-	background-color: grey;
-}
-
-nav ul li ul li {
+.nav_links li ul li {
 	display: none;
 	width: 100%;
+    
 }
 
-nav ul li:hover ul li{
+.nav_links li:hover ul li{
 	display:block;
+    background-color: transparent;
+
 }
