--- a/autres/styles.css
+++ b/autres/styles.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
 
 *{
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
   background-color: #24252A;
@@ -14,35 +13,31 @@ li, a, button {
     font-size: 21px;
     color: #edf0fe;
     text-decoration: none;
+    text-align:center;
+
 }
 
 header{
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-    padding: 30px 10%;
+    padding: 20px 2%;
 }
 
 .logo {
     cursor: pointer;
     margin-right: auto;
-    border-radius: 20px;
+    border-radius: 50px;
+
 }
 
 .nav_links{
     list-style: none;
-
 }
 
 .nav_links li {
-    padding: 0px 30px;
+    padding: 0px 0px;
     height: 30px;
-	text-align:center;
-	position:relative;
-    align-items: center;
-
-
-
+    margin-right: 30px;
 }
 
 
@@ -52,18 +47,26 @@ header{
 
 .nav_links li a:hover {
     color: #0088a9;
+}
 
+.nav_links li ul li {
+	display: none;
+}
+
+.nav_links li:hover ul li{
+	display:block;
+    width: 100%;
 
 }
 
 button {
+    margin-left: 100px;
     padding: 9px 25px;
     background-color: rgba(0,136,169,1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-    margin-left: 300px;
 }
 
 button:hover {
@@ -71,15 +74,3 @@ button:hover {
 }
 
 
-
-.nav_links li ul li {
-	display: none;
-	width: 100%;
-    
-}
-
-.nav_links li:hover ul li{
-	display:block;
-    background-color: transparent;
-
-}
