--- a/autres/styles.css
+++ b/autres/styles.css
@@ -3,15 +3,32 @@
 *{
   margin: 0;
   padding: 0;
-  background-color: #24252A;
-
 }
+
+
+html, body{
+    height: 100%;
+    overflow: auto;
+}
+
+body{
+    background:
+        url(../images/microsoft.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+}
+
+
+
+
+
 
 li, a, button {
     font-family: "Playball", sans-serif;
     font-weight: 500;
     font-size: 21px;
-    color: #edf0fe;
+    color: #000000;
     text-decoration: none;
     text-align:center;
 
@@ -26,8 +43,9 @@ header{
 .logo {
     cursor: pointer;
     margin-right: auto;
-    border-radius: 50px;
-
+    border-radius: 25px;
+    height: 125px;
+    width: 125px;
 }
 
 .nav_links{
@@ -37,16 +55,19 @@ header{
 .nav_links li {
     padding: 0px 0px;
     height: 30px;
-    margin-right: 30px;
+    margin-right: 50px;
+    margin-left: 50px;
+
 }
 
 
 .nav_links li a {
-    transition: all 0.3s ease 0s;	
+    transition: all 0.3s ease 0s;
+	
 }
 
 .nav_links li a:hover {
-    color: #0088a9;
+    color: #ffffff;
 }
 
 .nav_links li ul li {
@@ -55,14 +76,14 @@ header{
 
 .nav_links li:hover ul li{
 	display:block;
-    width: 100%;
+    width: 50%;
 
 }
 
 button {
     margin-left: 100px;
     padding: 9px 25px;
-    background-color: rgba(0,136,169,1);
+    background-color: rgb(255, 255, 255);
     border: none;
     border-radius: 50px;
     cursor: pointer;
