--- a/autres/styl.css
+++ b/autres/styl.css
@@ -142,3 +142,151 @@ table
 	width:40%;
 	text-align:center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+}
+
+
+html, body{
+    height: 100%;
+    overflow: auto;
+}
+
+body{
+    background:
+        url(../images/microsoft.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+}
+
+
+h {
+    font-size: 140px;
+    font-family: "Playball", sans-serif;
+    margin-right: 350px;
+}
+
+
+
+li, a, button {
+    font-family: "Playball", sans-serif;
+    font-weight: 500;
+    font-size: 21px;
+    color: #000000;
+    text-decoration: none;
+    text-align:center;
+
+}
+
+header{
+    display: flex;
+    align-items: center;
+    padding: 20px 2%;
+}
+
+.logo {
+    cursor: pointer;
+    margin-right: auto;
+    border-radius: 25px;
+    height: 125px;
+    width: 125px;
+}
+
+.nav_links{
+    list-style: none;
+}
+
+.nav_links li {
+    padding: 0px 0px;
+    height: 30px;
+    margin-right: 50px;
+    margin-left: 50px;
+
+}
+
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+	
+}
+
+.nav_links li a:hover {
+    color: #ffffff;
+}
+
+.nav_links li ul li {
+	display: none;
+}
+
+.nav_links li:hover ul li{
+	display:block;
+    width: 50%;
+
+}
+
+button {
+    margin-left: 100px;
+    padding: 9px 25px;
+    background-color: rgb(255, 255, 255);
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover {
+    background-color: rgba(0,136,169,0.8);
+}
